[package]
name = "terminal-utils"
description = "A collection of utilities for working with the terminal."
version = "0.1.0"
authors = ["Atrox <hello@atrox.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/atrox/terminal-utils"
homepage = "https://github.com/atrox/terminal-utils"
categories = ["terminal", "console", "utils"]
keywords = ["terminal", "console", "utils", "raw", "size"]


[features]
default = ["tokio"]
tokio = ["dep:tokio"]


[dependencies]
tokio = { version = "1.32.0", optional = true, features = [
    "rt",
    "sync",
    "signal",
    "time",
] }


[target.'cfg(unix)'.dependencies]
libc = "0.2.147"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
] }
